Atualização no Index.html

--- a/index.html
+++ b/index.html
@@ -359,9 +359,9 @@
                            <li><a href="http://portal.metodista.br/ead/mapa-de-polos?metodista">Mapa de Polos</a></li>
 
                            <div class="polosmenuifno">
-                              <li id="portaltab-cienciascontabeis" class="polosinfo">
+                              <!--li id="portaltab-cienciascontabeis" class="polosinfo">
                                  <a href="http://portal.metodista.br/seja-um-polo/" title="">Seja um polo</a><br>
-                              </li>
+                              </li-->
                               <li id="portaltab-cienciascontabeis" class="polosinfo">
                                  <a href="http://portal.metodista.br/ead/pos-graduacao-a-distancia/unidades-especiais-de-pos-graduacao/"
                                     title="">Unidades de Pós-Graduação</a>
@@ -472,6 +472,10 @@
                               href="http://portal.metodista.br/ead/graduacao-a-distancia/metodologia/perguntas-frequentes-graduacao">Perguntas
                               Frequentes</a></li>
                      </ul>
+                  </li>
+
+                  <li id="portaltab-sejaumpolo" class="plain">
+                     <a href="http://portal.metodista.br/seja-um-polo/" title="">Seja um Polo</a>
                   </li>
 
                </ul>
