Atualização no Index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <script type="text/javascript" src="js/behavior.js"></script>
    <link type="text/css" rel="stylesheet" href="css/main.css" />
    <link type="text/css" rel="stylesheet" href="css/normalize.css" />
-   <link type="text/css" rel="stylesheet" href="css/style.css?t2121" />
+   <link type="text/css" rel="stylesheet" href="css/style.css?03-09" />
    <link rel='stylesheet' type='text/css' href="css/contraste.css" />
    <link type="text/css" rel="stylesheet" href="css/impressao.css" />
    <link type="text/css" rel="stylesheet" href="css/enem.css" />
@@ -174,7 +174,7 @@
                <span class="ambientevirtual">
                   <a href="http://moodle.metodista.br/moodle-ead/login/index.php" target="_blank">
                      <i class="fa fa-desktop "></i>
-                     Ambiente Virtual
+                     Moodle
                   </a>
                </span>
 
@@ -209,65 +209,149 @@
                         <div class="colunamenu01">
                            <li id="linkgraduacao" class="linktitulo"><a
                                  href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos">Graduação</a></li>
-                           <li class="mtop10"><a
-                                 href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/administracao">Administração</a>
-                           </li>
-                           <li><a
-                                 href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/analise-e-desenvolvimento-de-sistemas">Análise
-                                 e Desenvolvimento de Sistemas</a></li>
-                           <li><a href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/ciencias-contabeis">Ciências
-                                 Contábeis</a></li>
-                           <!--li><a href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/ciencias-economicas">Ciências Econômicas</a></li-->
-                           <li><a
-                                 href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/comunicacao-digital-e-redes-sociais">Comunicação
-                                 Digital e Redes Sociais<span
-                                    style="color:#800000;font-weight:bold;font-size: 0.7em">NOVO</span> </a></li>
-                           <!--<li><a href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/comercio-exterior">Comércio Exterior </a></li>-->
-                           <li><a href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/gestao-ambiental">Gestão
-                                 Ambiental</a></li>
-                           <li><a href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/gestao-comercial">Gestão
-                                 Comercial</a></li>
-                           <li><a
-                                 href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/gestao-de-recursos-humanos-capa">Gestão
-                                 de Recursos Humanos</a></li>
-                           <li><a href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/gestao-de-seguros">Gestão
-                                 de Seguros</a></li>
-                           <li><a
-                                 href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/gestao-financeira-online">Gestão
-                                 Financeira</a></li>
+    						<li class="mtop10">
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/administracao">Administração</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/analise-e-desenvolvimento-de-sistemas">Análise e Desenvolvimento de Sistemas</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/ciencia-de-dados-e-big-data">Ciência de Dados e Big Data <span style="color:#800000;font-weight:bold;font-size: 0.7em">NOVO</span></a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/ciencias-biologicas">Ciências Biológicas</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/ciencias-contabeis">Ciências Contábeis</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/ciencias-sociais">Ciências Sociais</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/comercio-exterior">Comércio Exterior</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/comunicacao-digital-e-redes-sociais">Comunicação Digital e Redes Sociais</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/educacao-fisica">Educação Física <span style="color:#800000;font-weight:bold;font-size: 0.7em">NOVO</span></a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/engenharia-civil">Engenharia Civil <span style="color:#800000;font-weight:bold;font-size: 0.7em">NOVO</span></a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/engenharia-de-producao">Engenharia de Produção</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/gestao-ambiental">Gestão Ambiental</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/gestao-comercial">Gestão Comercial</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/gestao-da-tecnologia-da-informacao">Gestão da Tecnologia da Informação</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/gestao-de-recursos-humanos-capa">Gestão de Recursos Humanos</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/gestao-de-seguros">Gestão de Seguros</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/gestao-financeira-online">Gestão Financeira</a>
+							</li>
+
                            <!--<li><a href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/gestao-portuaria">Gestão Portuária</a></li>-->
-
-
                         </div>
+						 
                         <div class="colunamenu02">
-                           <li><a href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/gestao-publica">Gestão
-                                 Pública</a></li>
-                           <li><a href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/jogos-digitais">Jogos
-                                 Digitais </a></li>
-                           <li><a
-                                 href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/logistica-capa">Logística</a>
-                           </li>
-                           <li><a
-                                 href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/marketing-online">Marketing</a>
-                           </li>
-                           <li><a
-                                 href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/pedagogia-primeira-licenciatura">Pedagogia</a>
-                           </li>
-                           <li><a
-                                 href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/processos-gerenciais-capa">Processos
-                                 Gerenciais</a></li>
-                           <li><a
-                                 href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/producao-audiovisual">Produção
-                                 Audiovisual <span
-                                    style="color:#800000;font-weight:bold;font-size: 0.7em">NOVO</span></a></li>
-                           <li><a href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/seguranca-publica">Segurança
-                                 Pública </a></li>
-                           <li><a href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/servico-social">Serviço
-                                 Social <span style="color:#800000;font-weight:bold;font-size: 0.7em">NOVO</span></a>
-                           </li>
-                           <li><a
-                                 href="http://portal.metodista.br/ead/graduacao-a-distancia/cursos/teologia">Teologia</a>
-                           </li>
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/gestao-hospitalar">Gestão Hospitalar</a>
+							</li>
+							
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/gestao-portuaria">Gestão Portuária</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/gestao-publica">Gestão Pública</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/historia">História <span style="color:#800000;font-weight:bold;font-size: 0.7em">NOVO</span></a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/jogos-digitais">Jogos Digitais</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/jornalismo">Jornalismo <span style="color:#800000;font-weight:bold;font-size: 0.7em">NOVO</span></a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/letras-ingles">Letras - Português/Inglês</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/logistica-capa">Logística</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/marketing-online">Marketing</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/matematica">Matemática <span style="color:#800000;font-weight:bold;font-size: 0.7em">NOVO</span></a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/pedagogia-primeira-licenciatura">Pedagogia</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/processos-gerenciais-capa">Processos Gerenciais</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/producao-audiovisual">Produção Audiovisual</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/producao-multimidia">Produção Multimídia</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/producao-publicitaria">Produção Publicitária <span style="color:#800000;font-weight:bold;font-size: 0.7em">NOVO</span></a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/seguranca-publica">Segurança Pública</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/servico-social">Serviço Social</a>
+							</li>
+
+							<li>
+								 <a href="http://portal.metodista.br/ead/graduacao-a-distancia/polos/cursos/teologia">Teologia</a>
+							</li>
                         </div>
 
 
